--- a/flask_form/templates/result.html
+++ b/flask_form/templates/result.html
@@ -3,7 +3,7 @@
     <title>Sentiment Analysis</title>
 </head>
 <body>
-    <h1>Hasil</h1>
-    <p>Kalimat tersebut termasuk kategori = {{ sentiment }}.</p>
+    <h3>Hasil</h3>
+    <p>Kalimat tersebut termasuk kategori : {{ sentiment }}.</p>
 </body>
 </html>
