--- a/flask_form/templates/form.html
+++ b/flask_form/templates/form.html
@@ -3,9 +3,12 @@
     <title>Sentiment Analysis</title>
 </head>
 <body>
+    <h3>Submit Your Sentiment</h3>
     <form method = "POST" action = "/">
-        <label for = "sentence"> sentence: </label>
-        <input type = "text" id = "sentence" name = "sentence"><br>
+        <label for = "sentence"> Your sentiment : </label>
+        <input type = "text" id = "sentence" name = "sentence">
+        <br>
+        <br>
         <input type = "submit" value = "submit">
     </form>
 </body>
